Added responsive design for mobile and tablet

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="pop-up" id="win"> 
                 <p>
                     wow! ◉v◉ next level? <br>
-                    <button id="next-level-button">obviously yes</button>
+                    <button id="next-level-button">yes!</button>
                     <button id="exit-button">nah</button>
                 </p>
             </div>
@@ -79,10 +79,12 @@
         </div> 
         <div class="lessons">
             <h3>lessons learned!</h3>
-            <p>importance of removing event listeners<br>
-                cannot easily pass variables to event handler function! <br>
-                importance of drawing out the flow of a game and all the end points <br>
-                making one play level function and changing parameters</p>   
+            <ul>
+                <li>the importance of removing event listeners</li>
+                <li>I cannot easily pass variables to event handler function!</li>
+                <li>the importance of drawing out the flow of a game and all the end points</li>
+                <li>I can make one "play level" function and change parameters to make it feel like multiple levels</li>
+            </ul> 
         </div>
     </div>
     
